--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,12 @@
             <artifactId>karate-junit5</artifactId>
             <version>${karate.version}</version>
             <scope>test</scope>
-        </dependency>		
+        </dependency>
+        <dependency>
+            <groupId>net.masterthought</groupId>
+            <artifactId>cucumber-reporting</artifactId>
+            <version>4.11.2</version>
+        </dependency>
     </dependencies>
 
     <build>
