New scenarios are added to the Register Card QAT-1142 for field validation.

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>cucumber-reporting</artifactId>
             <version>4.11.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
